force-app/main/default/objects/User/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <label>Host Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>