force-app/main/default/objects/User/fields/Host_Marketing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Host_Marketing_Segment__c</fullName>
    <label>Host Marketing Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Interstate</fullName>
            </value>
            <value>
                <fullName>Regional/Domestic</fullName>
            </value>
            <value>
                <fullName>Indochina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>