force-app/main/default/objects/User/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Name</label>
    <type>Text</type>
</CustomField>