force-app/main/default/objects/User/fields/Host_Role_Position__c.field-meta.xml
<CustomField>
    <fullName>Host_Role_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Role/Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>