force-app/main/default/objects/User/fields/IsHost2__c.field-meta.xml
<CustomField>
    <fullName>IsHost2__c</fullName>
    <formula>IF( OR (NOT(ISBLANK(Contact.Host_Sydney__c)) ,
  NOT(ISBLANK(Contact.Host_GC__c))  ,
  NOT(ISBLANK(Contact.Host_Brisbane__c)),
   NOT(ISBLANK(Contact.Host_International__c))),TRUE,FALSE)</formula>
    <label>IsHost2</label>
    <type>Checkbox</type>
</CustomField>