force-app/main/default/objects/User/fields/IsHost__c.field-meta.xml
<CustomField>
    <fullName>IsHost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHost</label>
    <type>Checkbox</type>
</CustomField>