force-app/main/default/objects/User/fields/Last_Name_AD__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_AD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name - AD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>