force-app/main/default/objects/User/fields/MTD_Target__c.field-meta.xml
<CustomField>
    <fullName>MTD_Target__c</fullName>
    <description>Test Field</description>
    <label>MTD Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>