force-app/main/default/objects/User/fields/NameEmail__c.field-meta.xml
<CustomField>
    <fullName>NameEmail__c</fullName>
    <formula>FirstName + &quot; &quot; +  LastName + &quot; | &quot; +  Email</formula>
    <label>NameEmail</label>
    <type>Text</type>
</CustomField>