force-app/main/default/objects/User/fields/NEILON__Is_S3_Link_User__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Is_S3_Link_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, access for S3 Link will be granted.</description>
    <inlineHelpText>If checked, access for S3 Link will be granted.</inlineHelpText>
    <label>Is S3-Link User?</label>
    <type>Checkbox</type>
</CustomField>