force-app/main/default/objects/User/fields/NSW_License_Number__c.field-meta.xml
<CustomField>
    <fullName>NSW_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NSW License Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>