force-app/main/default/objects/User/fields/Patron_ID__c.field-meta.xml
<CustomField>
    <fullName>Patron_ID__c</fullName>
    <formula>Contact.Patron_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patron ID</label>
    <type>Text</type>
</CustomField>