force-app/main/default/objects/User/fields/Personas__c.field-meta.xml
<CustomField>
    <fullName>Personas__c</fullName>
    <label>Personas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interstate</fullName>
            </value>
            <value>
                <fullName>Local Telesales</fullName>
            </value>
            <value>
                <fullName>Premium Guest</fullName>
            </value>
            <value>
                <fullName>Premium Services</fullName>
            </value>
            <value>
                <fullName>Casino Services Supervisor/Hosts</fullName>
            </value>
            <value>
                <fullName>Premium Services Host</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
                <label>Gaming (GOM, GAM, AGM)</label>
            </value>
            <value>
                <fullName>Cage Operations</fullName>
            </value>
            <value>
                <fullName>Event Marketing</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Cashless Project</fullName>
            </value>
            <value>
                <fullName>Guest Feedback</fullName>
            </value>
            <value>
                <fullName>Loyalty Marketing Ops</fullName>
            </value>
            <value>
                <fullName>Guest Support Managers</fullName>
            </value>
            <value>
                <fullName>Fin Crime Operations</fullName>
            </value>
            <value>
                <fullName>CLM App</fullName>
                <label>Exclusions - CLM GIV/Exclusion application</label>
            </value>
            <value>
                <fullName>CLM App Rev</fullName>
                <label>Exclusions - CLM GIV/Exclusion application and revocation</label>
            </value>
            <value>
                <fullName>FinCrime Tech</fullName>
                <label>Exclusions - Fin Crime Technology</label>
            </value>
            <value>
                <fullName>SG Line2</fullName>
                <label>Exclusions - Safer Gambling Line 2</label>
            </value>
            <value>
                <fullName>PnP</fullName>
                <label>Exclusions - People and Performance</label>
            </value>
            <value>
                <fullName>Qld Reg</fullName>
                <label>Exclusions - QLD Regulators</label>
            </value>
            <value>
                <fullName>Inv WR</fullName>
                <label>Exclusions - Investigations - GIV/Exclusion Read/Write</label>
            </value>
            <value>
                <fullName>SG WR</fullName>
                <label>Exclusions - Safer Gambling - Read/Write</label>
            </value>
            <value>
                <fullName>Surv RD</fullName>
                <label>Exclusions - Surveillance - Read Only</label>
            </value>
            <value>
                <fullName>AP WR</fullName>
                <label>Exclusions - Asset Protections - Read/Write</label>
            </value>
            <value>
                <fullName>DDTMCS RD</fullName>
                <label>Exclusions - DD/TM/Customer Screening GIV /Exclusion Read</label>
            </value>
            <value>
                <fullName>FC Line2 RD</fullName>
                <label>Exclusions - FC Line 2 GIV/Exclusion App Read Only</label>
            </value>
            <value>
                <fullName>SG RD</fullName>
                <label>Exclusions - Safer Gambling - Read</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>