force-app/main/default/objects/User/fields/Portal_ConversionAttemptCount__c.field-meta.xml
<CustomField>
    <fullName>Portal_ConversionAttemptCount__c</fullName>
    <label>Portal_ConversionAttemptCount</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>