force-app/main/default/objects/User/fields/Portal_EmailVerified__c.field-meta.xml
<CustomField>
    <fullName>Portal_EmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal_emailverified</label>
    <type>Checkbox</type>
</CustomField>