force-app/main/default/objects/User/fields/Portal_LoginMethod__c.field-meta.xml
<CustomField>
    <fullName>Portal_LoginMethod__c</fullName>
    <label>Portal_LoginMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pin</fullName>
            </value>
            <value>
                <fullName>pwd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>