force-app/main/default/objects/User/fields/Portal_LoyaltyConversionInitiated__c.field-meta.xml
<CustomField>
    <fullName>Portal_LoyaltyConversionInitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal_LoyaltyConversionInitiated</label>
    <type>Checkbox</type>
</CustomField>