force-app/main/default/objects/User/fields/Portal_PhoneNumberVerified__c.field-meta.xml
<CustomField>
    <fullName>Portal_PhoneNumberVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal_PhoneNumberVerified</label>
    <type>Checkbox</type>
</CustomField>