force-app/main/default/objects/User/fields/Portal_ReLoginRequired__c.field-meta.xml
<CustomField>
    <fullName>Portal_ReLoginRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal_ReLoginRequired</label>
    <type>Checkbox</type>
</CustomField>