force-app/main/default/objects/User/fields/QLD_License_Number__c.field-meta.xml
<CustomField>
    <fullName>QLD_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QLD License Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>