force-app/main/default/objects/User/fields/Reports_to__c.field-meta.xml
<CustomField>
    <fullName>Reports_to__c</fullName>
    <label>Reports to</label>
    <relationshipName>Reportsto</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>