force-app/main/default/objects/User/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Custom Field created for Member Portal to store the ID_Token passed from Ping One Auth provider for Portal users.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>