force-app/main/default/objects/User/fields/Token_A__c.field-meta.xml
<CustomField>
    <fullName>Token_A__c</fullName>
    <description>Custom Field created for Member Portal to store access token returned from Ping One Auth Provider for Portal User.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>