force-app/main/default/objects/User/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>