force-app/main/default/objects/User/fields/YTD_Target__c.field-meta.xml
<CustomField>
    <fullName>YTD_Target__c</fullName>
    <label>YTD Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>